# ito

./: .editorconfig  .env.backend.example  .git.bak  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-opencode.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.backend  Makefile  README.md  RELEASE.md  THIRD_PARTY_NOTICES.md  codemap.json  codemap.md  deny.toml  dist-workspace.toml  docker-compose.backend.yml  issues.md  mise.toml  mkdocs.yml  notes.md  opencode.jsonc  paseo.json  release-plz.toml  source-guide.json  source-guide.md  zensical.toml  zoekt-usage-log.md
docs-tools/mkdocs-rustdoc-plugin/: README.md  pyproject.toml
docs-tools/mkdocs-rustdoc-plugin/mkdocs_rustdoc_plugin/: __init__.py  plugin.py
ito-rs/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bacon.toml  codemap.md  deny.toml  release-plz.toml  source-guide.md
ito-rs/.claude/commands/: ito-apply.md
ito-rs/.claude/skills/ito-finishing-a-development-branch/: SKILL.md
ito-rs/.claude/skills/ito-subagent-driven-development/: SKILL.md
ito-rs/.claude/skills/ito-workflow/: SKILL.md
ito-rs/.codex/prompts/: ito-proposal.md
ito-rs/.codex/skills/ito-brainstorming/: SKILL.md
ito-rs/.codex/skills/ito-write-change-proposal/: SKILL.md
ito-rs/.config/: nextest.toml
ito-rs/.github/prompts/: ito-research.prompt.md  ito.prompt.md
ito-rs/.github/skills/ito-using-git-worktrees/: SKILL.md
ito-rs/.opencode/commands/: ito-archive.md
ito-rs/.opencode/skills/ito-apply-change-proposal/: SKILL.md
ito-rs/.opencode/skills/ito-requesting-code-review/: SKILL.md
ito-rs/crates/: codemap.md  source-guide.md
ito-rs/crates/ito-backend/: CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-backend/src/: api.rs  auth.rs  auth_tests.rs  error.rs  error_tests.rs  lib.rs  server.rs  state.rs  state_tests.rs
ito-rs/crates/ito-backend/tests/: archive_sync.rs  bootstrap_endpoints.rs  event_ingest.rs  multi_tenant.rs  specs.rs  task_mutations.rs
ito-rs/crates/ito-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  build.rs  codemap.md  source-guide.md
ito-rs/crates/ito-cli/src/: cli.rs  cli_error.rs  cli_error_tests.rs  cli_tests.rs  diagnostics.rs  diagnostics_tests.rs  runtime.rs  util.rs  util_tests.rs
ito-rs/crates/ito-cli/tests/: agent_instruction_apply_readiness.rs  agent_instruction_apply_sync.rs  agent_instruction_bootstrap.rs  agent_instruction_cleanup.rs  agent_instruction_context.rs  agent_instruction_memory.rs  agent_instruction_orchestrate.rs  agent_instruction_repo_sweep.rs  agent_instruction_worktrees.rs  aliases.rs  aliases_edge_cases.rs  archive_completed.rs  archive_remote_mode.rs  archive_smoke.rs  artifact_mutations.rs  audit_more.rs  audit_remote_mode.rs  backend_import.rs  backend_qa_walkthrough.rs  backend_serve.rs  backend_status_more.rs  change_preflight.rs  cli_smoke.rs  cli_snapshots.rs  config_more.rs  coverage_smoke.rs  create_more.rs  feature_unavailable.rs  grep_more.rs  help.rs  init_agent_activation.rs  init_cleanup.rs  init_coordination.rs  init_gitignore_session_json.rs  init_more.rs  init_obsolete_cleanup.rs  init_rendering.rs  init_tmux.rs  init_upgrade_more.rs  init_worktree_flags.rs  (+32 more)
ito-rs/crates/ito-common/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-common/src/: fs.rs  git_url.rs  git_url_tests.rs  harness.rs  harness_tests.rs  io.rs  lib.rs  match_.rs  match_tests.rs  paths.rs  paths_tests.rs
ito-rs/crates/ito-config/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-config/src/: context.rs  context_tests.rs  lib.rs
ito-rs/crates/ito-core/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-core/src/: archive.rs  archive_specs.rs  archive_specs_tests.rs  artifact_mutations.rs  artifact_mutations_tests.rs  backend_auth.rs  backend_change_repository.rs  backend_change_repository_tests.rs  backend_client.rs  backend_client_tests.rs  backend_coordination.rs  backend_coordination_tests.rs  backend_health.rs  backend_health_tests.rs  backend_http.rs  backend_import.rs  backend_module_repository.rs  backend_spec_repository.rs  backend_sync.rs  backend_sync_tests.rs  backend_task_repository.rs  backend_task_repository_tests.rs  capabilities.rs  capabilities_tests.rs  change_meta.rs  change_repository.rs  change_repository_tests.rs  config.rs  config_tests.rs  coordination.rs  coordination_tests.rs  coordination_worktree.rs  coordination_worktree_helpers.rs  coordination_worktree_migration_tests.rs  coordination_worktree_tests.rs  distribution.rs  distribution_tests.rs  error_bridge.rs  errors.rs  errors_tests.rs  (+52 more)
ito-rs/crates/ito-core/tests/: archive.rs  audit_mirror.rs  audit_storage.rs  backend_archive.rs  backend_auth.rs  backend_auth_service.rs  backend_client_mode.rs  backend_module_repository.rs  backend_sub_module_support.rs  change_repository_lifecycle.rs  change_repository_orchestrate_metadata.rs  change_repository_parity.rs  change_target_resolution_parity.rs  coordination_worktree.rs  create.rs  distribution.rs  event_forwarding.rs  grep_scopes.rs  harness_context.rs  harness_opencode.rs  harness_streaming.rs  (+43 more)
ito-rs/crates/ito-domain/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-harness/: CHANGELOG.md  Cargo.toml
ito-rs/crates/ito-logging/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-models/: CHANGELOG.md  Cargo.toml
ito-rs/crates/ito-schemas/: CHANGELOG.md  Cargo.toml
ito-rs/crates/ito-templates/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-test-support/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/crates/ito-web/: AGENTS.md  CHANGELOG.md  Cargo.toml  codemap.md  source-guide.md
ito-rs/tools/: arch_guardrails.py  check_cargo_no_local_version.py  check_feature_matrix.sh  check_max_lines.py  check_release_features.py  max_lines_baseline.txt  precommit-lock.sh  sync_versions.py  test-affected.sh  version_bump.py
ito-rs/tools/hooks/: pre-commit
(+3048 files in other folders)
