[package]
name = "ito-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for Ito"

[[bin]]
name = "ito"
path = "src/main.rs"

[features]
default = ["web"]
web = ["dep:ito-web"]

[dependencies]
clap = { workspace = true }
clap_complete = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
log = { workspace = true }
dialoguer = { workspace = true }
crossterm = { workspace = true }
indicatif = { workspace = true }
ito-core = { workspace = true }
ito-common = { workspace = true }
ito-config = { workspace = true }
ito-logging = { workspace = true }
ito-templates = { workspace = true }
ito-web = { workspace = true, optional = true }
chrono = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
vergen-gitcl = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
filetime = { workspace = true }
insta = { workspace = true }
predicates = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
ito-test-support = { path = "../ito-test-support" }
