[package]
name = "ito-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

ito-common = { path = "../ito-common" }

[dev-dependencies]
tempfile = { workspace = true }
