[package]
name = "ito-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Configuration management for Ito"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

ito-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
