[package]
name = "ito-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality and business logic for Ito"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
pulldown-cmark = { workspace = true }
schemars = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
ito-common = { workspace = true }
ito-config = { workspace = true }
ito-domain = { workspace = true }
ito-templates = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
miette = { workspace = true }
tempfile = { workspace = true }
