[package]
name = "ito-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core functionality and business logic for Ito"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ito-common = { workspace = true }
ito-config = { workspace = true }
ito-domain = { workspace = true }
ito-templates = { workspace = true }
miette = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
hex = "0.4"
grep-matcher = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
tempfile = { workspace = true }
