[package]
name = "ito-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core functionality and business logic for Ito"

[features]
default = []
backend = ["dep:base64", "dep:rand", "dep:ureq"]
coordination-branch = []

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ito-common = { workspace = true }
ito-config = { workspace = true }
ito-domain = { workspace = true }
ito-templates = { workspace = true }
miette = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
hex = "0.4"
grep-matcher = { workspace = true }
grep-regex = { workspace = true }
grep-searcher = { workspace = true }
ureq = { workspace = true, optional = true }
tempfile = { workspace = true }
diffy = { workspace = true }

[dev-dependencies]
assert-struct = "0.2"
filetime = { workspace = true }

[target.'cfg(windows)'.dependencies]
# Legacy coordination detection remains available in the shipping build so
# Windows junctions must be inspectable without the coordination runtime.
junction = "1.4.2"
