[package]
name = "ito-domain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain models and repositories for Ito"

[dependencies]
ito-common = { workspace = true }
ito-schemas = { workspace = true }

chrono.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
rusqlite.workspace = true


[dev-dependencies]
tempfile.workspace = true
