[package]
name = "ito-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Harness detection and management for Ito"

[dependencies]
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
