[package]
name = "ito-templates"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Template management and installation for Ito"

[dependencies]
include_dir = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
