[package]
name = "ito-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Test utilities and helpers for Ito"

[dependencies]
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
