[package]
name = "ito-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Test utilities and helpers for Ito"
publish = false

[dependencies]
chrono = { workspace = true }
ito-domain = { path = "../ito-domain" }
portable-pty = { workspace = true }
strip-ansi-escapes = { workspace = true }
tempfile = { workspace = true }
