[package]
name = "ito-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Web server and UI for Ito"

[[bin]]
name = "ito-web"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "process"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
miette = { workspace = true }
clap = { workspace = true }
futures = "0.3"
portable-pty = { workspace = true }
sha2 = "0.10"
hex = "0.4"
gethostname = "0.5"
ito-templates = { workspace = true }
ito-core = { workspace = true }

[package.metadata.dist]
dist = false
